fix: adjust formatting and structure in WorkHeader component for improved readability and layout

--- a/src/components/reactComponent/works/components/WorkHeader/WorkHeader.module.scss
+++ b/src/components/reactComponent/works/components/WorkHeader/WorkHeader.module.scss
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.3rem;
+  justify-content: space-between;
   cursor: pointer;
 }
 
